--- a/src/components/layout/Message.module.css
+++ b/src/components/layout/Message.module.css
@@ -9,5 +9,13 @@
 }
 
 .success{
-    
+    color: #155724;
+    background-color: #D4EDDA;
+    border-color: #C3E6CB;
+}
+
+.error {
+    color: #722C24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
 }
