feat: Componente Loading

--- a/src/components/pages/Projects.module.css
+++ b/src/components/pages/Projects.module.css
@@ -1,9 +1,10 @@
 .project_container {
-    padding: 2em;
+    padding: .5em;
 }
 
 .title_container{
     display: flex;
     justify-content: space-between;
     margin-bottom: 2em;
+    padding: 1em;
 }
